[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacehub-calc"
version = "0.1.0"
description = "Analysis and visualization tools for SpaceHub N-body simulation outputs"
readme = "README.md"
authors = [
    {name = "Nicholas Marston", email = "ntmarston@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["astrophysics", "n-body", "orbital-mechanics", "simulation", "visualization"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "astropy>=4.3.0",
    "seaborn>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/ntmarston/spacehub_calc"
Repository = "https://github.com/ntmarston/spacehub_calc"
Issues = "https://github.com/ntmarston/spacehub_calc/issues"

[tool.setuptools]
py-modules = ["spacehub_calc"]
